fix: make header visible

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,6 +16,7 @@
   width: 100%;
   &__text {
     height: 1rem;
+    color: #ddd;
   }
   &__year {
     font-size: 1rem;
